[package]
name = "libthermite"
version = "0.7.0-beta" # managed by release.sh
edition = "2021"
description = "Crate for managing Northstar mods"
license = "MIT"
repository = "https://forge.greenboi.me/Emerald/thermite"
exclude = ["commands/", "*.zip"]

[workspace]
members = ["xtask"]

[lib]
name = "thermite"

[[example]]
name = "steam"
required-features = ["steam"]

[dependencies]
flate2 = { version = "1.0.25", optional = true , default-features = false }
json5 = "0.4.1"
lazy_static = "1.4.0"
regex = { default-features = false, version = "1.9.1" }
serde = { version = "1.0.152", features = ["serde_derive"], default-features = false }
serde_json = "1.0.91"
steamlocate = { version = "1.1.1", optional = true }
tar = { version = "0.4.38", optional = true }
thiserror = "1.0.38"
tracing = { default-features = false, version = "0.1.37" }
ureq = { version = "2.6.2" }
zip = { default-features = false, version = "0.6.3", features = ["deflate"] }

[features]
default = []
steam = ["steamlocate"]
proton = ["tar", "flate2"]

[dev-dependencies]
indicatif = "0.17.3"
mockall = { version = "0.11.4" }
