[package]
name = "libthermite"
version = "0.8.2" # managed by release.sh
edition = "2021"
rust-version = "1.80"
description = "Crate for managing Northstar mods"
license = "MIT"
repository = "https://github.com/AnActualEmerald/thermite"
exclude = [
    "commands/",
    "*.zip",
    "*.tar.gz",
]

[workspace]
members = [
    "xtask",
]

[lib]
name = "thermite"

[[example]]
name = "steam"
required-features = [
    "steam",
]

[lints.clippy]
unwrap_used = "deny"

[dependencies]
flate2 = { version = "^1.1", optional = true, default-features = false }
json5 = "^0.4"
regex = { default-features = false, features=["unicode-perl"], version = "^1.11" }
serde = { version = "^1.0", features = ["serde_derive"], default-features = false }
serde_json = "^1.0"
steamlocate = { version = "^1", optional = true }
tar = { version = "^0.4", optional = true }
thiserror = "^2.0"
tracing = { default-features = false, version = "^0.1" }
ureq = { version = "^3" }
zip = { default-features = false, version = "^2.2", features = [
    "deflate",
] }

[features]
default = [
]
steam = [
    "steamlocate",
]
proton = [
    "tar",
    "flate2",
]
all = [
    "steam",
    "proton",
]

[dev-dependencies]
indicatif = "0.17.3"
mockall = { version = "0.13" }
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
] }
tracing-test = "0.2.4"
